@@ -51,6 +51,7 @@ module Fairy
 	    export = @exports[key]
 	    unless export
 	      export = Export.new(policy)
+	      export.njob_id = @id
 	      export.add_key(key)
 	      add_export(key, export)
 	      @counter[key] = 0
