@@ -1,3 +1,8 @@
+Thu Apr  8 20:15:39 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>
+
+	* b-merge-group_by.rb, n-direct-product.rb, n-group-by.rb,
+  	  n-single-exportable.rb, port.rb: REQ#227対応(その2) Export対応
+
 Thu Apr  8 19:25:00 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>
 
 	* processor.rb,b-merge-group_by.rb, bhere.rb here.rb,
